--- a/Drawing Board/Drawing.html
+++ b/Drawing Board/Drawing.html
@@ -7,13 +7,19 @@
     <title>Drawing Board</title>
   </head>
   <body>
-  <h1> Paint your own Picture </h1>
-    <p>Set width
-      <input type = "text"            onchange="setWidth(this.value)" />
-     Set Height
-      <input type="text" onchange="setHeight(this.value)" />
-    </p>
-    <canvas id="canvas1" onmousedown = "startPaint()" onmousemove = "doPaint(event.offsetX , event.offsetY)">
-    </canvas>
+    <h1> Paint Your Own Picture</h1>
+    <div>
+  <p>
+    Set width (min = 300 and max = 1000) : <input type = "number" onchange = "setWidth(this.value)" min = "300" max = "1000"/><br><br>
+    Set height (min = 300 and max = 1000) : <input type = "number" onchange = "setHeight(this.value)" min = "300" max = "1000"/>
+  </p><br>
+  <canvas id = "canvas1" onmousedown = "startPaint(event.offsetX, event.offsetY)" onmousemove = "doPaint(event.offsetX, event.offsetY)" onmouseup = "endPaint()"></canvas>
+  <p>
+    Brush Color (choose by color picker or enter hex code) ; <input type = "color" value = "#000" onchange = "changeColor(this.value)"/>     <input type = "text" id = "brush" value = "" readonly/><br><br>
+    Brush Size : <input type= "range" value = "1" min = "1" max = "50" id = "sizeInput" onchange = "resizeBrush(this.value)"/><input type = "text" value = "0" id = "otp" readonly>
+  </p>
+  <p>
+    <input type = "button" id = "clear" value = "Clear Canvas" onclick = "clearCanvas()"/>
+      </p></div>
   </body>
 </html>
